backend/verify_output.txt
C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
scripts/verify_wallet.ts(1,10): error TS2614: Module '"../src/models/Contact"' has no exported member 'Contact'. Did you mean to use 'import Contact from "../src/models/Contact"' instead?
scripts/verify_wallet.ts(2,10): error TS2614: Module '"../src/models/User"' has no exported member 'User'. Did you mean to use 'import User from "../src/models/User"' instead?
scripts/verify_wallet.ts(22,13): error TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
scripts/verify_wallet.ts(39,23): error TS2339: Property 'reload' does not exist on type 'Contact'.
scripts/verify_wallet.ts(58,23): error TS2339: Property 'reload' does not exist on type 'Contact'.
scripts/verify_wallet.ts(77,23): error TS2339: Property 'reload' does not exist on type 'Contact'.
scripts/verify_wallet.ts(85,23): error TS2339: Property 'destroy' does not exist on type 'Contact'.
scripts/verify_wallet.ts(91,9): error TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.

    at createTSError (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {
  diagnosticCodes: [
    2614, 2614, 2580,
    2339, 2339, 2339,
    2339, 2580
  ]
}
